k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${PRODUCT}-service #gateway无法和ingress共用一个service，这里的名字要和ingress对应的区分来创建新的service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP #https://cloud.google.com/kubernetes-engine/docs/concepts/service
  selector:
    app: ${PRODUCT}-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ${PRODUCT}-gateway
  annotations:
    networking.gke.io/certmap: ${PRODUCT}-certmap #参见本文件最后的注释部分的创建命令
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ${PRODUCT}-route
spec:
  parentRefs:
    - name: ${PRODUCT}-gateway
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: ${PRODUCT}-service
          port: 8080
